--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -600,7 +600,7 @@ section.target {
   height: 100vh;
 
   div.topline {
-    width: 90%;
+    width: 75%;
     display: flex;
     justify-content: space-between;
 
@@ -1182,7 +1182,7 @@ section.fonctions {
 
   div.content {
     display: flex;
-    width: 90%;
+    width: 75%;
 
     .left {
       flex: 1;
@@ -1301,19 +1301,19 @@ section.custom {
   }
 
   .content {
-    width: 75%;
+    width: 80%;
     display: flex;
     justify-content: center;
-    gap: 2%;
+    gap: 10%;
 
     .gauche {
       display: flex;
-      flex: 1;
+      width: 50%;
       align-items: center;
     }
 
     .droite {
-      flex: 1;
+      width: 50%;
 
       .title {
         font-family: 'krub';
@@ -1450,12 +1450,12 @@ section.demo {
     align-items: center;
 
     .left {
-      flex: 1;
+      width: 50%;
       max-width: 50%;
     }
 
     .right {
-      flex: 1;
+      width: 50%;
       max-width: 50%;
 
       .titre {
@@ -1463,13 +1463,13 @@ section.demo {
           text-align: center;
           font-family: 'krub';
           font-weight: @bold;
-          font-size: 40px;
+          font-size: 2.5rem;
           text-transform: uppercase;
 
           &:nth-of-type(2) {
             color: @luxant;
-            font-weight: @regular;
-            font-size: 36px;
+            font-weight: @semibold;
+            font-size: 1.4rem;
           }
         }
       }
@@ -1489,11 +1489,11 @@ section.demo {
         font-family: 'krub';
         font-size: 1rem;
         font-weight: @semibold;
-        background-color: rgb(242, 242, 242);
+        background-color: rgb(247, 247, 247);
       }
 
       textarea {
-        background-color: rgb(242, 242, 242);
+        background-color: rgb(247, 247, 247);
         max-width: 100%;
         min-width: 100%;
         min-height: 15vh;
@@ -1552,12 +1552,12 @@ footer {
 
   div.content {
     display: flex;
-    width: 75%;
+    width: 90%;
     height: 95%;
     justify-content: center;
 
     .left {
-      flex: 1;
+      width: 50%;
       display: flex;
       justify-content: flex-start;
 
@@ -1571,7 +1571,9 @@ footer {
     }
 
     .right {
-      flex: 1;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
       justify-content: center;
       gap: 0;
 
@@ -1583,7 +1585,7 @@ footer {
         p {
           font-family: 'krub';
           font-weight: @bold;
-          font-size: 36px;
+          font-size: 3rem;
           color: white;
           text-align: end;
           margin: 0;
@@ -1608,7 +1610,7 @@ footer {
         padding: 1% 4%;
         font-family: 'oswald';
         font-weight: @semibold;
-        font-size: 18px;
+        font-size: 1.1rem;
         background-color: @luxant;
         border: none;
         align-self: flex-end;
@@ -1638,7 +1640,7 @@ footer {
       p {
         font-family: 'krub';
         font-weight: @bold;
-        font-size: 36px;
+        font-size: 2.3rem;
         color: white;
         text-align: end;
         margin-top: 10%;
@@ -1648,7 +1650,7 @@ footer {
           color: white;
           text-transform: uppercase;
           padding: 0;
-          font-size: 36px;
+          font-size: 2.3rem;
           background-color: transparent;
 
           i {
@@ -1916,7 +1918,7 @@ footer {
     height: 100vh;
 
     div.topline {
-      width: 90%;
+      width: 75%;
       display: flex;
       justify-content: space-between;
 
@@ -2498,7 +2500,7 @@ footer {
 
     div.content {
       display: flex;
-      width: 90%;
+      width: 75%;
 
       .left {
         width: 50%;
