--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -579,7 +579,7 @@ section.target {
   height: 100vh;
 }
 section.target div.topline {
-  width: 90%;
+  width: 75%;
   display: flex;
   justify-content: space-between;
 }
@@ -1069,7 +1069,7 @@ section.fonctions {
 }
 section.fonctions div.content {
   display: flex;
-  width: 90%;
+  width: 75%;
 }
 section.fonctions div.content .left {
   flex: 1;
@@ -1162,18 +1162,18 @@ section.custom::after {
   color: #F1F1F1;
 }
 section.custom .content {
-  width: 75%;
+  width: 80%;
   display: flex;
   justify-content: center;
-  gap: 2%;
+  gap: 10%;
 }
 section.custom .content .gauche {
   display: flex;
-  flex: 1;
+  width: 50%;
   align-items: center;
 }
 section.custom .content .droite {
-  flex: 1;
+  width: 50%;
 }
 section.custom .content .droite .title {
   font-family: 'krub';
@@ -1283,24 +1283,24 @@ section.demo div.content {
   align-items: center;
 }
 section.demo div.content .left {
-  flex: 1;
+  width: 50%;
   max-width: 50%;
 }
 section.demo div.content .right {
-  flex: 1;
+  width: 50%;
   max-width: 50%;
 }
 section.demo div.content .right .titre p {
   text-align: center;
   font-family: 'krub';
   font-weight: 700;
-  font-size: 40px;
+  font-size: 2.5rem;
   text-transform: uppercase;
 }
 section.demo div.content .right .titre p:nth-of-type(2) {
   color: #d6bb73;
-  font-weight: 400;
-  font-size: 36px;
+  font-weight: 600;
+  font-size: 1.4rem;
 }
 section.demo div.content form {
   display: flex;
@@ -1315,10 +1315,10 @@ section.demo div.content form input {
   font-family: 'krub';
   font-size: 1rem;
   font-weight: 600;
-  background-color: #f2f2f2;
+  background-color: #f7f7f7;
 }
 section.demo div.content form textarea {
-  background-color: #f2f2f2;
+  background-color: #f7f7f7;
   max-width: 100%;
   min-width: 100%;
   min-height: 15vh;
@@ -1369,12 +1369,12 @@ footer {
 }
 footer div.content {
   display: flex;
-  width: 75%;
+  width: 90%;
   height: 95%;
   justify-content: center;
 }
 footer div.content .left {
-  flex: 1;
+  width: 50%;
   display: flex;
   justify-content: flex-start;
 }
@@ -1386,7 +1386,9 @@ footer div.content .left video {
   transform: scaleX(-1);
 }
 footer div.content .right {
-  flex: 1;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   gap: 0;
 }
@@ -1398,7 +1400,7 @@ footer div.content .right .news {
 footer div.content .right .news p {
   font-family: 'krub';
   font-weight: 700;
-  font-size: 36px;
+  font-size: 3rem;
   color: white;
   text-align: end;
   margin: 0;
@@ -1420,7 +1422,7 @@ footer div.content .right button {
   padding: 1% 4%;
   font-family: 'oswald';
   font-weight: 600;
-  font-size: 18px;
+  font-size: 1.1rem;
   background-color: #d6bb73;
   border: none;
   align-self: flex-end;
@@ -1446,7 +1448,7 @@ footer div.content .right button:hover i {
 footer div.content .right p {
   font-family: 'krub';
   font-weight: 700;
-  font-size: 36px;
+  font-size: 2.3rem;
   color: white;
   text-align: end;
   margin-top: 10%;
@@ -1455,7 +1457,7 @@ footer div.content .right p a {
   color: white;
   text-transform: uppercase;
   padding: 0;
-  font-size: 36px;
+  font-size: 2.3rem;
   background-color: transparent;
 }
 footer div.content .right p a i {
@@ -1658,7 +1660,7 @@ footer .credit p i {
     height: 100vh;
   }
   section.target div.topline {
-    width: 90%;
+    width: 75%;
     display: flex;
     justify-content: space-between;
   }
@@ -2148,7 +2150,7 @@ footer .credit p i {
   }
   section.fonctions div.content {
     display: flex;
-    width: 90%;
+    width: 75%;
   }
   section.fonctions div.content .left {
     width: 50%;
