--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -309,7 +309,7 @@ header {
   width: 100%;
   padding-top: 1%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   flex-direction: column;
   margin: 0 auto;
 }
@@ -354,7 +354,7 @@ header div.nav div.menu ul li a:hover {
 }
 header div.main {
   display: flex;
-  height: 70%;
+  height: 100%;
   padding: 0 5%;
   align-items: flex-end;
 }
@@ -1072,7 +1072,7 @@ section.fonctions div.content {
   width: 75%;
 }
 section.fonctions div.content .left {
-  flex: 1;
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -1082,33 +1082,23 @@ section.fonctions div.content .left .title {
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: 700;
-  margin-bottom: 5%;
-}
-section.fonctions div.content .left .title p {
-  text-align: justify;
-  position: relative;
-}
-section.fonctions div.content .left .title p:nth-of-type(2) {
-  position: absolute;
-  color: #d6bb73;
-  font-weight: 500;
-  font-size: 36px;
-  left: 38%;
+  padding: 5% 0%;
 }
 section.fonctions div.content .left .desc p {
   font-family: 'krub';
   font-size: 1.5rem;
   font-weight: 600;
+  padding: 5% 0%;
 }
 section.fonctions div.content .left .details {
   display: flex;
   font-family: 'krub';
   font-weight: 600;
   font-size: 1.25rem;
-  gap: 10%;
+  flex-direction: column;
+  padding: 5% 0%;
 }
 section.fonctions div.content .left .details .gauche {
-  flex: 1;
   padding-left: 2%;
 }
 section.fonctions div.content .left .details .gauche ul li {
@@ -1120,22 +1110,9 @@ section.fonctions div.content .left .details .gauche ul li {
 section.fonctions div.content .left .details .gauche ul li::marker {
   color: #d6bb73;
 }
-section.fonctions div.content .left .details .droite {
-  flex: 1;
-  padding-left: 2%;
-}
-section.fonctions div.content .left .details .droite ul li {
-  list-style-type: '\25A0';
-  padding-left: 2%;
-  padding-top: 2%;
-  padding-bottom: 2%;
-}
-section.fonctions div.content .left .details .droite ul li::marker {
-  color: #d6bb73;
-}
 section.fonctions .right {
   padding: 0;
-  flex: 1;
+  width: 50%;
   display: flex;
   justify-content: flex-end;
 }
@@ -1162,6 +1139,7 @@ section.custom::after {
   color: #F1F1F1;
 }
 section.custom .content {
+  height: 100%;
   width: 80%;
   display: flex;
   justify-content: center;
@@ -1174,18 +1152,26 @@ section.custom .content .gauche {
 }
 section.custom .content .droite {
   width: 50%;
+  align-self: center;
 }
 section.custom .content .droite .title {
   font-family: 'krub';
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: 700;
-  margin-bottom: 5%;
+  padding: 5% 0%;
+}
+section.custom .content .droite .desc {
+  font-family: 'krub', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding: 5% 0%;
 }
 section.custom .content .droite .details {
   font-family: 'krub';
   font-weight: 600;
   font-size: 1.25rem;
+  padding: 5% 0%;
 }
 section.custom .content .droite ul li {
   list-style-type: '\25A0';
@@ -1197,7 +1183,7 @@ section.custom .content .droite ul li::marker {
   color: #d6bb73;
 }
 section.video {
-  height: 100vh;
+  height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1239,6 +1225,7 @@ section.video .txt:nth-of-type(2) p {
 section.video div.content {
   display: flex;
   width: 75%;
+  height: 100%;
   justify-content: center;
   position: relative;
 }
@@ -1246,6 +1233,7 @@ section.video div.content .vid {
   display: flex;
   justify-content: center;
   position: relative;
+  height: 100%;
 }
 section.video div.content .vid::after {
   content: "";
@@ -1254,7 +1242,7 @@ section.video div.content .vid::after {
   background-size: cover;
   background-position: center;
   pointer-events: none;
-  width: 90%;
+  width: 100%;
   height: 100%;
   border-radius: 10px;
   opacity: 1;
@@ -1266,7 +1254,6 @@ section.video div.content .vid.hide-overlay::after {
   visibility: hidden;
 }
 section.video div.content video {
-  max-width: 90%;
   border-radius: 10px;
   display: inline;
 }
@@ -1275,6 +1262,7 @@ section.demo {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 10%;
 }
 section.demo div.content {
   display: flex;
@@ -2172,11 +2160,11 @@ footer .credit p i {
     display: flex;
     font-family: 'krub';
     font-weight: 600;
-    font-size: 1.15rem;
+    font-size: 1rem;
     gap: 10%;
   }
   section.fonctions div.content .left .details .gauche {
-    width: 50%;
+    width: 100%;
     padding-left: 2%;
   }
   section.fonctions div.content .left .details .gauche ul li {
@@ -2222,7 +2210,7 @@ footer .credit p i {
     bottom: 0;
     font-family: 'krub';
     font-weight: 700;
-    font-size: 6rem;
+    font-size: 3rem;
     text-transform: uppercase;
     writing-mode: vertical-rl;
     transform: rotate(-180deg);
@@ -2233,7 +2221,7 @@ footer .credit p i {
     width: 90%;
     display: flex;
     justify-content: center;
-    gap: 2%;
+    gap: 10%;
   }
   section.custom .content .gauche {
     display: flex;
@@ -2252,6 +2240,293 @@ footer .credit p i {
   }
   section.custom .content .droite .details ul li {
     font-size: 1rem;
+  }
+}
+/* ------------------------------------------------------------------------- */
+/* ------------------------------ 1440px ----------------------------------- */
+/* ------------------------------------------------------------------------- */
+@media (max-width: 1440px) {
+  section.fonctions .content .left .details .gauche {
+    width: 100%;
+    padding-left: 2%;
+  }
+}
+/* ------------------------------------------------------------------------- */
+/* ------------------------------ 1024px ----------------------------------- */
+/* ------------------------------------------------------------------------- */
+@media (max-width: 1024px) {
+  section.fonctions {
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  section.fonctions div.content {
+    display: flex;
+    width: 80%;
+  }
+  section.fonctions div.content .left {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  section.fonctions div.content .left .title {
+    font-size: 2.8rem;
+    margin-bottom: 0;
+  }
+  section.fonctions div.content .left .desc p {
+    font-family: 'krub';
+    font-size: 1rem;
+    font-weight: 600;
+    padding-right: 0%;
+  }
+  section.fonctions div.content .left .details {
+    display: flex;
+    font-family: 'krub';
+    font-weight: 600;
+    font-size: 0.85rem;
+    gap: 10%;
+  }
+  section.fonctions div.content .left .details .gauche {
+    width: 50%;
+    padding-left: 2%;
+  }
+  section.fonctions div.content .left .details .gauche ul li {
+    list-style-type: '\25A0';
+    padding-left: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+  section.fonctions div.content .left .details .gauche ul li::marker {
+    color: #d6bb73;
+  }
+  section.fonctions .right {
+    padding: 0;
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  section.fonctions .right div {
+    width: 60%;
+  }
+  section.custom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+    position: relative;
+    margin-bottom: 0%;
+  }
+  section.custom::after {
+    position: absolute;
+    content: 'EXPLORE';
+    right: 0%;
+    bottom: 0;
+    font-family: 'krub';
+    font-weight: 700;
+    font-size: 3rem;
+    text-transform: uppercase;
+    writing-mode: vertical-rl;
+    transform: rotate(-180deg);
+    letter-spacing: 0.8rem;
+    color: #F1F1F1;
+  }
+  section.custom .content {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+  }
+  section.custom .content .gauche {
+    display: flex;
+    width: 50%;
+    align-items: center;
+  }
+  section.custom .content .droite {
+    width: 50%;
+  }
+  section.custom .content .droite .title {
+    font-size: 2.8rem;
+  }
+  section.custom .content .droite .desc p {
+    font-family: 'krub';
+    font-size: 1rem;
+    font-weight: 600;
+    padding-right: 0%;
+  }
+  section.custom .content .droite .details {
+    font-family: 'krub';
+    font-weight: 600;
+  }
+  section.custom .content .droite .details ul li {
+    font-size: 0.85rem;
+  }
+  section.video {
+    height: 90vh;
+  }
+  section.demo {
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  section.demo div.content {
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  section.demo div.content .left {
+    width: 40%;
+    max-width: 50%;
+  }
+  section.demo div.content .right {
+    width: 60%;
+    max-width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 10%;
+  }
+  section.demo div.content .right .titre p {
+    text-align: center;
+    font-family: 'krub';
+    font-weight: 700;
+    font-size: 2rem;
+    text-transform: uppercase;
+  }
+  section.demo div.content .right .titre p:nth-of-type(2) {
+    color: #d6bb73;
+    font-weight: 600;
+    font-size: 1.1rem;
+  }
+  section.demo div.content form {
+    display: flex;
+    flex-direction: column;
+    color: #AEAEAE;
+    padding: 2% 15%;
+  }
+  section.demo div.content form input {
+    margin: 5% 0%;
+    padding: 4% 2%;
+    border: #d6bb73 2px solid;
+    font-family: 'krub';
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: #f7f7f7;
+  }
+  section.demo div.content form textarea {
+    background-color: #f7f7f7;
+    max-width: 100%;
+    min-width: 100%;
+    min-height: 15vh;
+    max-height: 30vh;
+    margin: 5% 0%;
+    padding: 4% 2%;
+    border: #d6bb73 2px solid;
+    font-family: 'krub';
+    font-size: 1rem;
+    font-weight: 600;
+  }
+  section.demo div.content form button {
+    text-transform: uppercase;
+    width: fit-content;
+    padding: 2% 5%;
+    font-family: 'oswald';
+    font-weight: 600;
+    font-size: 18px;
+    background-color: #d6bb73;
+    border: none;
+    align-self: center;
+    border: transparent 2px solid;
+    transition: all 0.3s ease;
+  }
+  section.demo div.content form button i {
+    display: none;
+    visibility: hidden;
+    margin: 0 15%;
+  }
+  section.demo div.content form button:hover {
+    cursor: pointer;
+    border: 2px solid #d6bb73;
+    background-color: #f2f2f2;
+  }
+  section.demo div.content form button:hover i {
+    margin: 0 15%;
+    visibility: visible;
+    display: inline;
+    opacity: 1;
+  }
+}
+/* ------------------------------------------------------------------------- */
+/* ------------------------------ 768px ----------------------------------- */
+/* ------------------------------------------------------------------------- */
+@media (max-width: 1024px) {
+  section.fonctions {
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  section.fonctions div.content {
+    height: 100%;
+  }
+  section.fonctions div.content .left {
+    justify-content: center;
+    gap: 5%;
+  }
+  section.fonctions div.content .left .title {
+    font-size: 2rem;
+    padding: 2% 0;
+  }
+  section.fonctions div.content .left .desc p {
+    font-family: 'krub';
+    font-size: 1rem;
+    font-weight: 600;
+    padding-right: 0%;
+  }
+  section.fonctions div.content .left .details {
+    flex-direction: column;
+    gap: 0;
+  }
+  section.fonctions div.content .left .details .gauche {
+    width: 100%;
+    padding-left: 2%;
+  }
+  section.fonctions div.content .left .details .gauche ul li {
+    list-style-type: '\25A0';
+    padding-left: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+  section.fonctions div.content .left .details .gauche ul li::marker {
+    color: #d6bb73;
+  }
+  section.fonctions div.content .left .details .droite {
+    width: 100%;
+    padding-left: 2%;
+  }
+  section.fonctions div.content .left .details .droite ul li {
+    list-style-type: '\25A0';
+    padding-left: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+  section.fonctions div.content .left .details .droite ul li::marker {
+    color: #d6bb73;
+  }
+  section.fonctions .right {
+    align-items: center;
+  }
+  section.fonctions .right div {
+    width: 60%;
+  }
+  section.custom .content .droite .title {
+    font-size: 2rem;
+  }
+  section.custom::after {
+    font-size: 1.5rem;
   }
 }
 /* ------------------------------------------------------------------------- */
