--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -445,6 +445,9 @@ header .right p {
   text-align: left;
   letter-spacing: 2px;
 }
+header .right p span {
+  font-weight: 700;
+}
 header .right a {
   text-transform: uppercase;
   width: fit-content;
@@ -1641,51 +1644,26 @@ footer .credit p i {
     font-weight: 500;
   }
   section.target {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-evenly;
     height: 100vh;
   }
-  section.target div.topline {
-    width: 75%;
-    display: flex;
-    justify-content: space-between;
-  }
   section.target div.topline div.gauche div p {
-    text-transform: uppercase;
-    font-family: 'krub';
-    font-weight: 700;
-    font-size: 3rem;
+    font-size: 2.8rem;
   }
   section.target div.topline div.gauche div:nth-of-type(2) p {
-    text-align: end;
-    font-size: 2rem;
-    color: #d6bb73;
-    font-weight: 500;
-  }
-  section.target div.topline div.droite div {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
+    font-size: 1.8rem;
   }
   section.target div.topline div.droite div::before {
     position: absolute;
     content: '\25A0';
     left: -25%;
-    top: 20%;
-    font-size: 26px;
+    top: 12%;
+    font-size: 1.5rem;
   }
   section.target div.topline div.droite div p {
-    font-family: 'krub';
-    font-weight: 700;
-    font-size: 16px;
-    text-transform: uppercase;
+    font-size: 1rem;
   }
   section.target div.topline div.droite div p:nth-of-type(2) {
-    font-size: 20px;
+    font-size: 1.2rem;
   }
   section.target div.flexing {
     display: flex;
@@ -2255,6 +2233,9 @@ footer .credit p i {
 /* ------------------------------ 1024px ----------------------------------- */
 /* ------------------------------------------------------------------------- */
 @media (max-width: 1024px) {
+  section.target .topline .gauche div p {
+    font-size: 2.8rem;
+  }
   section.fonctions {
     height: 80vh;
     display: flex;
@@ -2285,11 +2266,11 @@ footer .credit p i {
     display: flex;
     font-family: 'krub';
     font-weight: 600;
-    font-size: 0.85rem;
-    gap: 10%;
+    font-size: 1rem;
+    gap: 0%;
   }
   section.fonctions div.content .left .details .gauche {
-    width: 50%;
+    width: 100%;
     padding-left: 2%;
   }
   section.fonctions div.content .left .details .gauche ul li {
@@ -2311,26 +2292,11 @@ footer .credit p i {
     width: 60%;
   }
   section.custom {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: fit-content;
-    position: relative;
+    height: 100vh;
     margin-bottom: 0%;
   }
   section.custom::after {
-    position: absolute;
-    content: 'EXPLORE';
-    right: 0%;
-    bottom: 0;
-    font-family: 'krub';
-    font-weight: 700;
-    font-size: 3rem;
-    text-transform: uppercase;
-    writing-mode: vertical-rl;
-    transform: rotate(-180deg);
-    letter-spacing: 0.8rem;
-    color: #F1F1F1;
+    font-size: 1.8rem;
   }
   section.custom .content {
     width: 90%;
@@ -2360,16 +2326,27 @@ footer .credit p i {
     font-weight: 600;
   }
   section.custom .content .droite .details ul li {
-    font-size: 0.85rem;
+    font-size: 1rem;
   }
   section.video {
-    height: 90vh;
+    height: 60vh;
+  }
+  section.video div.content {
+    width: 80%;
+    height: 90%;
+    align-items: center;
+  }
+  section.video div.content div.vid {
+    height: 85%;
+    width: auto;
+  }
+  section.video div.content div.vid video {
+    width: auto;
+    height: 100%;
   }
   section.demo {
     height: 70vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 0;
   }
   section.demo div.content {
     display: flex;
@@ -2458,11 +2435,58 @@ footer .credit p i {
     display: inline;
     opacity: 1;
   }
+  footer div.content div.right div.news p {
+    font-size: 2rem;
+  }
+  footer div.content div.right button {
+    font-size: 0.85rem;
+  }
+  footer div.content div.right p {
+    font-size: 1.8rem;
+  }
+  footer div.content div.right p a {
+    font-size: 1.5rem;
+  }
 }
 /* ------------------------------------------------------------------------- */
 /* ------------------------------ 768px ----------------------------------- */
 /* ------------------------------------------------------------------------- */
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
+  header div.main {
+    flex-direction: column-reverse;
+    position: relative;
+    padding: 0%;
+  }
+  header div.main div.mid {
+    width: 100%;
+    position: absolute;
+    background-color: #ffffff;
+    opacity: 0.2;
+    z-index: 1;
+  }
+  header div.main div.right {
+    align-items: center;
+    text-align: center;
+    z-index: 5;
+    width: 100%;
+  }
+  header div.main div.right p {
+    text-align: center;
+    font-size: 1.1rem;
+    padding: 5% 0%;
+  }
+  header div.main div.right a {
+    font-weight: 500;
+  }
+  section.target div.topline {
+    width: 80%;
+  }
+  section.target div.topline div.gauche div p {
+    font-size: 2rem;
+  }
+  section.target div.topline div.gauche div:nth-of-type(2) p {
+    font-size: 1.3rem;
+  }
   section.fonctions {
     height: 80vh;
     display: flex;
@@ -2635,6 +2659,9 @@ section.innovation div.bottom div p {
   header div.nav div.burger span::after {
     top: 10px;
   }
+  header div.nav div.burger.burger-open span {
+    background-color: transparent;
+  }
   header div.nav div.burger.burger-open span::before {
     transform: rotate(45deg);
     top: 0;
@@ -2646,9 +2673,9 @@ section.innovation div.bottom div p {
     background-color: #181818;
   }
   header div.nav div.menu {
-    height: fit-content;
+    height: 100vh;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: #ffffff;
     color: white;
     position: fixed;
     right: 0;
@@ -2657,11 +2684,12 @@ section.innovation div.bottom div p {
     overflow-x: hidden;
     transition: all 0.3s ease-in-out;
     border-bottom: 1px solid #181818;
-    border-top: 1px solid #181818;
   }
   header div.nav div.menu.is-open {
     display: flex;
-    margin-top: 5.05920344vh;
+    height: 100vh;
+    top: 10%;
+    align-items: center;
   }
   header div.nav div.menu a img {
     padding: 20px 50px;
@@ -2674,6 +2702,7 @@ section.innovation div.bottom div p {
     align-items: center;
   }
   header div.nav div.menu ul li {
+    width: 50%;
     text-align: center;
     list-style-type: none;
     display: block;
@@ -2684,6 +2713,7 @@ section.innovation div.bottom div p {
     font-size: 26px;
     line-height: 48px;
     position: relative;
+    text-align: center;
   }
 }
 /* ------------------------------------------------------------------------- */
