--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -23,25 +23,6 @@
   inherits: false;
 }
 
-// Définition des breakpoints en LESS
-
-// Petit appareil (téléphones portables)
-@screen-xs-max: ~"only screen and (max-width: 575.98px)";
-
-// Appareils moyens (tablettes en mode portrait)
-@screen-sm-min: ~"only screen and (min-width: 576px)";
-@screen-sm-max: ~"only screen and (max-width: 767.98px)";
-
-// Appareils larges (tablettes en mode paysage, petits ordinateurs portables)
-@screen-md-min: ~"only screen and (min-width: 768px)";
-@screen-md-max: ~"only screen and (max-width: 991.98px)";
-
-// Appareils extra-larges (grands ordinateurs portables et petits ordinateurs de bureau)
-@screen-lg-min: ~"only screen and (min-width: 992px)";
-@screen-lg-max: ~"only screen and (max-width: 1199.98px)";
-
-// Appareils XXL (grands écrans de bureau)
-@screen-xl-min: ~"only screen and (min-width: 1200px)";
 
 header,
 section,
@@ -445,6 +426,10 @@ header {
       line-height: 170%;
       text-align: left;
       letter-spacing: 2px;
+
+      span {
+        font-weight: @bold;
+      }
     }
 
     a {
@@ -1313,7 +1298,7 @@ section.custom {
         padding: 5% 0%;
       }
 
-      .desc{
+      .desc {
         font-family: 'krub', sans-serif;
         font-size: 1.5rem;
         font-weight: @semibold;
@@ -1910,32 +1895,18 @@ footer {
   }
 
   section.target {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-evenly;
     height: 100vh;
 
     div.topline {
-      width: 75%;
-      display: flex;
-      justify-content: space-between;
-
       div.gauche {
         div {
           p {
-            text-transform: uppercase;
-            font-family: 'krub';
-            font-weight: @bold;
-            font-size: 3rem;
+            font-size: 2.8rem;
           }
 
           &:nth-of-type(2) {
             p {
-              text-align: end;
-              font-size: 2rem;
-              color: @luxant;
-              font-weight: @medium;
+              font-size: 1.8rem;
             }
           }
         }
@@ -1943,28 +1914,19 @@ footer {
 
       div.droite {
         div {
-          height: 100%;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          position: relative;
-
           &::before {
             position: absolute;
             content: '\25A0';
             left: -25%;
-            top: 20%;
-            font-size: 26px;
+            top: 12%;
+            font-size: 1.5rem;
           }
 
           p {
-            font-family: 'krub';
-            font-weight: @bold;
-            font-size: 16px;
-            text-transform: uppercase;
+            font-size: 1rem;
 
             &:nth-of-type(2) {
-              font-size: 20px;
+              font-size: 1.2rem;
             }
           }
         }
@@ -2614,17 +2576,17 @@ footer {
         align-items: center;
       }
 
-        .droite {
-          width: 50%;
+      .droite {
+        width: 50%;
 
-          .title {
-            font-size: 3rem;
+        .title {
+          font-size: 3rem;
 
-          }
+        }
 
-          .details {
-            font-family: 'krub';
-            font-weight: @semibold;      
+        .details {
+          font-family: 'krub';
+          font-weight: @semibold;
 
           ul {
             li {
@@ -2645,7 +2607,7 @@ footer {
 @media (max-width: 1440px) {
 
   section.fonctions {
-    .content{
+    .content {
       .left {
         .details {
           .gauche {
@@ -2668,6 +2630,17 @@ footer {
 
 @media (max-width: 1024px) {
 
+  section.target {
+    .topline {
+      .gauche {
+        div {
+          p {
+            font-size: 2.8rem;
+          }
+        }
+      }
+    }
+  }
 
   section.fonctions {
     height: 80vh;
@@ -2703,11 +2676,11 @@ footer {
           display: flex;
           font-family: 'krub';
           font-weight: 600;
-          font-size: 0.85rem;
-          gap: 10%;
+          font-size: 1rem;
+          gap: 0%;
 
           .gauche {
-            width: 50%;
+            width: 100%;
             padding-left: 2%;
 
             ul {
@@ -2733,7 +2706,8 @@ footer {
       width: 50%;
       display: flex;
       justify-content: flex-end;
-      div{
+
+      div {
         width: 60%;
       }
     }
@@ -2742,27 +2716,11 @@ footer {
 
 
   section.custom {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: fit-content;
-    position: relative;
+    height: 100vh;
     margin-bottom: 0%;
 
     &::after {
-      position: absolute;
-      content: 'EXPLORE';
-      right: 0%;
-      bottom: 0;
-      font-family: 'krub';
-      font-weight: @bold;
-      font-size: 3rem;
-      text-transform: uppercase;
-      writing-mode: vertical-rl;
-      transform: rotate(-180deg);
-      letter-spacing: 0.8rem;
-      color: #F1F1F1;
-
+      font-size: 1.8rem;
     }
 
     .content {
@@ -2777,28 +2735,29 @@ footer {
         align-items: center;
       }
 
-        .droite {
-          width: 50%;
+      .droite {
+        width: 50%;
 
-          .title {
-            font-size: 2.8rem;
-          }
-          .desc {
-            p {
-              font-family: 'krub';
-              font-size: 1rem;
-              font-weight: @semibold;
-              padding-right: 0%;
-            }
-          }
+        .title {
+          font-size: 2.8rem;
+        }
 
-          .details {
+        .desc {
+          p {
             font-family: 'krub';
-            font-weight: @semibold;      
+            font-size: 1rem;
+            font-weight: @semibold;
+            padding-right: 0%;
+          }
+        }
+
+        .details {
+          font-family: 'krub';
+          font-weight: @semibold;
 
           ul {
             li {
-              font-size: 0.85rem;
+              font-size: 1rem;
             }
           }
         }
@@ -2806,29 +2765,41 @@ footer {
     }
   }
 
-  section.video{
-    height: 90vh;
+  section.video {
+    height: 60vh;
 
+    div.content {
+      width: 80%;
+      height: 90%;
+      align-items: center;
 
+      div.vid {
+        height: 85%;
+        width: auto;
+
+        video {
+          width: auto;
+          height: 100%;
+        }
+      }
+    }
   }
 
-section.demo {
+  section.demo {
     height: 70vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
+    margin-top: 0;
+
     div.content {
       display: flex;
       width: 90%;
       justify-content: space-between;
       align-items: center;
-  
+
       .left {
         width: 40%;
         max-width: 50%;
       }
-  
+
       .right {
         width: 60%;
         max-width: 60%;
@@ -2836,7 +2807,7 @@ section.demo {
         flex-direction: column;
         justify-content: center;
         padding-left: 10%;
-  
+
         .titre {
           p {
             text-align: center;
@@ -2844,7 +2815,7 @@ section.demo {
             font-weight: @bold;
             font-size: 2rem;
             text-transform: uppercase;
-  
+
             &:nth-of-type(2) {
               color: @luxant;
               font-weight: @semibold;
@@ -2853,14 +2824,14 @@ section.demo {
           }
         }
       }
-  
-  
+
+
       form {
         display: flex;
         flex-direction: column;
         color: #AEAEAE;
         padding: 2% 15%;
-  
+
         input {
           margin: 5% 0%;
           padding: 4% 2%;
@@ -2870,7 +2841,7 @@ section.demo {
           font-weight: @semibold;
           background-color: rgb(247, 247, 247);
         }
-  
+
         textarea {
           background-color: rgb(247, 247, 247);
           max-width: 100%;
@@ -2884,7 +2855,7 @@ section.demo {
           font-size: 1rem;
           font-weight: @semibold;
         }
-  
+
         button {
           text-transform: uppercase;
           width: fit-content;
@@ -2897,24 +2868,48 @@ section.demo {
           align-self: center;
           border: transparent 2px solid;
           transition: all .3s ease;
-  
+
           i {
             display: none;
             visibility: hidden;
             margin: 0 15%;
           }
-  
+
           &:hover {
             cursor: pointer;
             border: 2px solid @luxant;
             background-color: rgb(242, 242, 242);
-  
+
             i {
               margin: 0 15%;
               visibility: visible;
               display: inline;
               opacity: 1;
             }
+          }
+        }
+      }
+    }
+  }
+
+  footer {
+    div.content {
+      div.right {
+        div.news {
+          p {
+            font-size: 2rem;
+          }
+        }
+
+        button {
+          font-size: 0.85rem;
+        }
+
+        p {
+          font-size: 1.8rem;
+
+          a {
+            font-size: 1.5rem;
           }
         }
       }
@@ -2927,7 +2922,58 @@ section.demo {
 /* ------------------------------------------------------------------------- */
 
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
+  header {
+    div.main {
+      flex-direction: column-reverse;
+      position: relative;
+      padding: 0%;
+
+      div.mid {
+        width: 100%;
+        position: absolute;
+        background-color: #ffffff;
+        opacity: 0.2;
+        z-index: 1;
+
+      }
+
+      div.right {
+        align-items: center;
+        text-align: center;
+        z-index: 5;
+        width: 100%;
+
+        p {
+          text-align: center;
+          font-size: 1.1rem;
+          padding: 5% 0%;
+        }
+
+        a {
+          font-weight: @medium;
+        }
+      }
+    }
+  }
+
+  section.target {
+    div.topline {
+      width: 80%;
+      div.gauche{
+        div{
+          p {
+            font-size: 2rem;
+          }
+          &:nth-of-type(2){
+            p{
+              font-size: 1.3rem;
+            }
+          }
+        }
+      }
+    }
+  }
 
   section.fonctions {
     height: 80vh;
@@ -3002,24 +3048,32 @@ section.demo {
 
     .right {
       align-items: center;
-      div{
+
+      div {
         width: 60%;
       }
     }
   }
 
-section.custom{
-  .content{
-    .droite{
-      .title{
-        font-size: 2rem;
+  section.custom {
+    .content {
+      .droite {
+        .title {
+          font-size: 2rem;
+        }
       }
     }
+
+    &::after {
+      font-size: 1.5rem;
+    }
   }
-  &::after{
-    font-size: 1.5rem;
+
+  section.video{
+    div.content{
+      
+    }
   }
-}
 }
 
 /* ------------------------------------------------------------------------- */
@@ -3190,6 +3244,8 @@ section.innovation {
         }
 
         &.burger-open span {
+          background-color: transparent;
+
           &::before {
             transform: rotate(45deg);
             top: 0;
@@ -3207,9 +3263,9 @@ section.innovation {
       div.logo {}
 
       div.menu {
-        height: fit-content;
+        height: 100vh;
         width: 100%;
-        background-color: rgba(255, 255, 255, 0.9);
+        background-color: rgba(255, 255, 255, 1);
         color: white;
         position: fixed;
         right: 0;
@@ -3218,11 +3274,13 @@ section.innovation {
         overflow-x: hidden;
         transition: all .3s ease-in-out;
         border-bottom: 1px solid #181818;
-        border-top: 1px solid #181818;
 
         &.is-open {
           display: flex;
-          margin-top: 5.059203444564047vh;
+          height: 100vh;
+          top: 10%;
+          align-items: center;
+
         }
 
         a {
@@ -3239,6 +3297,7 @@ section.innovation {
           align-items: center;
 
           li {
+            width: 50%;
             text-align: center;
             list-style-type: none;
             display: block;
@@ -3249,6 +3308,7 @@ section.innovation {
               font-size: 26px;
               line-height: 48px;
               position: relative;
+              text-align: center;
             }
           }
         }
