--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -461,6 +461,7 @@ header .divider {
   padding: 0% 10%;
   height: 10vh;
   width: 100%;
+  z-index: 2;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -2387,7 +2388,7 @@ footer .credit p i {
   section.demo div.content form input {
     margin: 5% 0%;
     padding: 4% 2%;
-    border: #d6bb73 2px solid;
+    border: #d6bb73 1px solid;
     font-family: 'krub';
     font-size: 1rem;
     font-weight: 600;
@@ -2401,7 +2402,7 @@ footer .credit p i {
     max-height: 30vh;
     margin: 5% 0%;
     padding: 4% 2%;
-    border: #d6bb73 2px solid;
+    border: #d6bb73 1px solid;
     font-family: 'krub';
     font-size: 1rem;
     font-weight: 600;
@@ -2454,29 +2455,36 @@ footer .credit p i {
 @media (max-width: 768px) {
   header div.main {
     flex-direction: column-reverse;
+    align-items: center;
     position: relative;
     padding: 0%;
   }
   header div.main div.mid {
-    width: 100%;
-    position: absolute;
+    width: 60%;
+    height: 80%;
     background-color: #ffffff;
-    opacity: 0.1;
-    z-index: 1;
+    align-items: flex-end;
+  }
+  header div.main div.mid .hero svg {
+    width: 60%;
+    height: auto;
+  }
+  header div.main div.mid .hero img {
+    width: 55%;
+    height: auto;
   }
   header div.main div.right {
     align-items: center;
     text-align: center;
-    z-index: 5;
     width: 100%;
   }
   header div.main div.right p {
     text-align: center;
     font-size: 1.1rem;
-    padding: 5% 0%;
+    padding: 2% 0%;
   }
   header div.main div.right a {
-    font-weight: 500;
+    display: none;
   }
   section.target div.topline {
     width: 80%;
@@ -2551,6 +2559,193 @@ footer .credit p i {
   }
   section.custom::after {
     font-size: 1.5rem;
+  }
+  section.video div.content div.vid {
+    height: 65%;
+  }
+  section.video div.txt svg {
+    width: 20px;
+    height: 70px;
+  }
+  section.video div.txt p {
+    font-size: 0.6rem;
+  }
+  section.demo div.content div.right .titre p:nth-of-type(2) {
+    font-weight: 500;
+  }
+  section.demo div.content form input {
+    font-size: 0.8rem;
+  }
+  section.demo div.content form textarea {
+    font-size: 0.8rem;
+  }
+  section.demo div.content form button {
+    font-size: 1rem;
+  }
+  footer div.credit p {
+    width: calc(100%/3);
+    font-size: 0.8rem;
+  }
+}
+/* ------------------------------------------------------------------------- */
+/* ------------------------------ 425px ----------------------------------- */
+/* ------------------------------------------------------------------------- */
+@media (max-width: 425px) {
+  header div.main {
+    flex-direction: column-reverse;
+    align-items: center;
+    position: relative;
+    padding: 0%;
+  }
+  header div.main div.mid {
+    width: 60%;
+    height: 80%;
+    background-color: #ffffff;
+    align-items: flex-end;
+  }
+  header div.main div.mid .hero svg {
+    width: 60%;
+    height: auto;
+  }
+  header div.main div.mid .hero img {
+    width: 55%;
+    height: auto;
+  }
+  header div.main div.right {
+    align-items: center;
+    text-align: center;
+    width: 100%;
+  }
+  header div.main div.right p {
+    text-align: center;
+    font-size: 1.1rem;
+    padding: 2% 0%;
+  }
+  header div.main div.right a {
+    display: none;
+  }
+  section.target div.topline {
+    width: 80%;
+  }
+  section.target div.topline div.gauche div p {
+    font-size: 2rem;
+  }
+  section.target div.topline div.gauche div:nth-of-type(2) p {
+    font-size: 1.3rem;
+  }
+  section.fonctions {
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  section.fonctions div.content {
+    height: 100%;
+  }
+  section.fonctions div.content .left {
+    justify-content: center;
+    gap: 5%;
+  }
+  section.fonctions div.content .left .title {
+    font-size: 2rem;
+    padding: 2% 0;
+  }
+  section.fonctions div.content .left .desc p {
+    font-family: 'krub';
+    font-size: 1rem;
+    font-weight: 600;
+    padding-right: 0%;
+  }
+  section.fonctions div.content .left .details {
+    flex-direction: column;
+    gap: 0;
+  }
+  section.fonctions div.content .left .details .gauche {
+    width: 100%;
+    padding-left: 2%;
+  }
+  section.fonctions div.content .left .details .gauche ul li {
+    list-style-type: '\25A0';
+    padding-left: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+  section.fonctions div.content .left .details .gauche ul li::marker {
+    color: #d6bb73;
+  }
+  section.fonctions div.content .left .details .droite {
+    width: 100%;
+    padding-left: 2%;
+  }
+  section.fonctions div.content .left .details .droite ul li {
+    list-style-type: '\25A0';
+    padding-left: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+  section.fonctions div.content .left .details .droite ul li::marker {
+    color: #d6bb73;
+  }
+  section.fonctions .right {
+    align-items: center;
+  }
+  section.fonctions .right div {
+    width: 60%;
+  }
+  section.custom {
+    padding: 5% 0%;
+  }
+  section.custom .content {
+    flex-direction: column-reverse;
+    gap: 0;
+  }
+  section.custom .content .droite {
+    width: 100%;
+  }
+  section.custom .content .droite .title {
+    font-size: 1.5rem;
+    text-align: center;
+    width: 100%;
+  }
+  section.custom .content .droite .title p {
+    width: 100%;
+  }
+  section.custom .content .gauche {
+    width: 100%;
+  }
+  section.custom .content .gauche div img {
+    margin: 0 auto;
+    width: 80%;
+    height: auto;
+  }
+  section.custom::after {
+    font-size: 1.5rem;
+  }
+  section.video div.content div.vid {
+    height: 35%;
+  }
+  section.video div.txt svg {
+    width: 20px;
+    height: 70px;
+  }
+  section.video div.txt p {
+    font-size: 0.6rem;
+  }
+  section.demo div.content div.right .titre p:nth-of-type(2) {
+    font-weight: 500;
+  }
+  section.demo div.content form input {
+    font-size: 0.8rem;
+  }
+  section.demo div.content form textarea {
+    font-size: 0.8rem;
+  }
+  section.demo div.content form button {
+    font-size: 1rem;
+  }
+  footer div.credit p {
+    width: calc(100%/3);
+    font-size: 0.8rem;
   }
 }
 /* ------------------------------------------------------------------------- */
