--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2082,7 +2082,6 @@ footer {
   }
 
   section.fonctions {
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2284,7 +2283,6 @@ footer {
   }
 
   section.fonctions {
-    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2633,7 +2631,6 @@ footer {
   }
 
   section.fonctions {
-    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -3014,13 +3011,11 @@ footer {
   }
 
   section.fonctions {
-    height: 100%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
 
     div.content {
-      height: 100%;
+      padding: 10% 0%;
       flex-direction: column;
 
       .left {
